# oncallpilot

./: .env.example  .gitignore  DECISIONS.md  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  evals-pr.yml
apps/web/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/lib/: agentClient.ts  metrics.ts
docs/: DEPLOY.md  DESIGN_BRIEF.md
docs/corpus/adrs/: 0001-alert-severity-levels.md
docs/corpus/alerts/: alert-catalog.md
docs/corpus/postmortems/: 2026-05-checkout-latency.md  2026-06-kafka-backlog.md
docs/corpus/runbooks/: api-5xx.md  cert-expiry.md  deploy-rollback.md  disk-full.md  dns-resolution-failure.md  kafka-consumer-lag.md  lb-502-bad-gateway.md  oom-killer.md  postgres-replication-lag.md  rate-limit-exhaustion.md  redis-oom.md
eval/: baseline.json
eval/datasets/: answer.yaml  retrieval.yaml  tasks.yaml
ops/: Makefile  docker-compose.yml
ops/fly/: agent.fly.toml  mcp.fly.toml  web.fly.toml
ops/scripts/: wait_for_health.sh
services/agent/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/agent/app/: __init__.py  agent.py  config.py  cost.py  edge_guard.py  llm.py  main.py  rag.py  resilience.py
services/agent/app/eval/: __init__.py  graders.py  judge.py  run.py
services/agent/app/graph/: __init__.py  build.py  state.py
services/agent/app/guardrails/: __init__.py  injection.py  pii.py
services/agent/app/obs/: __init__.py  recorder.py
services/agent/app/retrieval/: __init__.py  chunker.py  citations.py  db.py  embed.py  evaluate.py  fusion.py  ingest.py  loaders.py  rerank.py  retrieve.py  schema.sql  store.py  types.py
services/agent/app/tools/: __init__.py  mcp_client.py  policy.py
services/agent/tests/: test_agent_graph.py  test_chat_stream.py  test_chunker.py  test_edge_guard.py  test_embed_prefix.py  test_eval_gate.py  test_fusion.py  test_guardrails.py  test_health.py  test_rag.py  test_recorder.py
services/mcp-server/: .dockerignore  Dockerfile  pyproject.toml
services/mcp-server/app/: __init__.py  backends.py  server.py
services/mcp-server/app/seed/: alerts.json  ci_pipelines.json  jira_projects.json
services/mcp-server/tests/: test_backend.py
