[project]
name = "oncallpilot-agent"
version = "0.0.1"
description = "OncallPilot agent service (FastAPI + Claude) — Phase 0 skeleton"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.116",
    "pydantic-settings>=2.4",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
