[project]
name = "oncallpilot-agent"
version = "0.0.1"
description = "OncallPilot agent service (FastAPI + Claude) — Phase 0 skeleton"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.116",
    "pydantic-settings>=2.4",
    "sse-starlette>=2.1",
    # --- Phase 1: retrieval ---
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "transformers>=4.44",
    "pyyaml>=6.0",
    # --- Phase 2: agent + tools ---
    "langgraph>=0.2",
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = false

# Pull CPU-only torch (the default PyPI wheel bundles CUDA and is ~2GB).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
