[project]
name = "oncallpilot-mcp-server"
version = "0.0.1"
description = "OncallPilot MCP tools server (FastMCP) — CI / monitoring / Jira (mock)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
